classDiagram
    %% Compact version for presentations
    
    class StudentModel {
        +forward(x) Tensor
        +get_features(x) Tensor
    }
    
    class TeacherModel {
        +forward(x) Tensor
    }
    
    class PredictionService {
        +predict(image, heatmap) dict
        +assign_risk_level(prob) str
    }
    
    class ImageService {
        +validate_image(file) bool
        +save_image(file) str
        +preprocess(filename) Tensor
    }
    
    class ReportService {
        +generate_report(filename, predictions) bytes
    }
    
    class KDTrainer {
        +train(epochs) void
        +validate() dict
    }
    
    class DistillationLoss {
        +forward(student, teacher, targets) Tensor
    }
    
    class GradCAM {
        +generate_cam(input, class) ndarray
    }
    
    %% Relationships
    PredictionService --> StudentModel
    PredictionService --> GradCAM
    KDTrainer --> StudentModel
    KDTrainer --> TeacherModel
    KDTrainer --> DistillationLoss
    
    StudentModel --|> Module
    TeacherModel --|> Module
    
    note for StudentModel "Hybrid CNN-Transformer"
    note for TeacherModel "DenseNet121 (CheXNet)"
